# github_star_notifier

./: .gitignore  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_store.rs  main.rs  star_notifier.rs
